--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -8,7 +8,13 @@ body {
 
 h1 {
     text-align: center;
+    color:#FF5733;
 }
+h2{
+    font-size: 20px;
+    text-align: center;
+    color:#FF5733;
+    }
 
 .form-container {
     max-width: 300px;
